# airnub-prefect-starter

./: .env.example  CONTRIBUTING.md  Dockerfile.worker  GOAL.md  LICENSE  Makefile  README.md  docker-compose.yml  prefect.local.yaml  pyproject.toml
.ai/: README.md
.github/workflows/: deploy-docs.yml
airnub_prefect_starter/common/: utils.py
airnub_prefect_starter/core/: api_handlers.py  artifact_creators.py  file_handlers.py  manifest_models.py  web_utils.py
airnub_prefect_starter/data_science/: dataset.py  features.py  plots.py
airnub_prefect_starter/data_science/modeling/: predict.py  train.py
configs/: department_mapping.yaml
configs/variables/dept_project_alpha/: analysis_config_dept_project_alpha.yaml  ingestion_config_dept_project_alpha.yaml  processing_config_dept_project_alpha.yaml
configs/variables/dept_project_alpha/ingestion/public_api_data/: ingest_public_api_data_config_dept_project_alpha.yaml
configs/variables/dept_project_alpha/ingestion/public_api_data/tasks/: fetch_data_from_public_api_task_config_dept_project_alpha.yaml  parse_api_response_task_config_dept_project_alpha.yaml
configs/variables/dept_project_alpha/ingestion/scheduled_file_downloads/: ingest_scheduled_file_downloads_config_dept_project_alpha.yaml
configs/variables/dept_project_alpha/ingestion/web_page_link_scraping/: ingest_web_page_link_scraping_config_dept_project_alpha.yaml
docs/: BUILDING_DOCS.md  architecture.md  changelog.md  configuration.md  data_science_workflow.md  deployment.md  development.md  getting-started.md  index.md  mkdocs.yml  usage.md
docs/docs/: architecture.md  configuration.md  development.md  getting-started.md  index.md  license.md  usage.md
docs/docs/examples/: project-alpha-api-polling.md  project-alpha-file-downloads.md  project-alpha-web-scraping.md
docs/examples/: project-alpha-api-polling.md  project-alpha-overview.md  project-alpha-web-scraping.md
flows/dept_project_alpha/: analysis_flow_dept_project_alpha.py  ingestion_flow_dept_project_alpha.py  processing_flow_dept_project_alpha.py
flows/dept_project_alpha/ingestion/public_api_data/: ingest_public_api_data_flow_dept_project_alpha.py
flows/dept_project_alpha/ingestion/public_api_data/tasks/: __init__.py  create_api_data_artifact_task_dept_project_alpha.py  fetch_data_from_public_api_task_dept_project_alpha.py  parse_api_response_task_dept_project_alpha.py
flows/dept_project_alpha/ingestion/scheduled_file_downloads/: ingest_scheduled_file_downloads_flow_dept_project_alpha.py
flows/dept_project_alpha/ingestion/scheduled_file_downloads/tasks/: __init__.py  create_manifest_archive_task_dept_project_alpha.py  download_file_task_dept_project_alpha.py
flows/dept_project_alpha/ingestion/tasks/: __init__.py  create_ingestion_summary_artifact_task_dept_project_alpha.py
flows/dept_project_alpha/ingestion/web_page_link_scraping/: ingest_web_page_link_scraping_flow_dept_project_alpha.py
flows/dept_project_alpha/ingestion/web_page_link_scraping/tasks/: __init__.py  create_scrape_artifact_task_dept_project_alpha.py  extract_links_from_html_content_task_dept_project_alpha.py  fetch_html_content_of_web_page_task_dept_project_alpha.py
scripts/: build_deployments.sh  run_local_dev.sh  setup_prefect_blocks.py  setup_prefect_variables.py  stop_local_dev.sh
scripts/generators/: add_category.py  add_department.py  add_task.py  utils.py
tests/: test_generators.py
tests/generators/: conftest.py  test_add_category.py  test_add_department.py  test_add_task.py
(+4 files in other folders)
